2005-03-26 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genSkipc): fixed semantics (execute branch
	  if condition == CARRY)
	* (genCmp): adapted to new genSkipc semantics
	* src/pic16/genutils.c (pic6_genCmp_special): removed side effect
	  on rIfx (genCmp was broken)

2005-03-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCmain.c (setDefaultOptions, optionsTable[], parseCmdLine),
	* src/z80/main.c (_keywords[]),
	* src/SDCCglobal.h (struct options),
	* src/SDCC.y,
	* src/SDCC.lex (isTargetKeyword, doPragma, pragma_tbl[]): new pragmas
	to enable/disable SDCC and C99 extensions/keywords (std_c89, std_sdcc89,
	std_c99, std_sdcc99). Also, equivalent command line options (--std-c89,
	--std-sdcc89, --std-c99, --std-sdcc99). SDCC specific keywords are
	always available in leading double underscore form. The C99 support is
	mostly missing, but it's a start.
	* support/regression/tests/bug-227710.c: fixed nonconforming use of
	reserved identifier "__data".

2005-03-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def: fixed bug 1170013

2005-03-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51reg.h: fixed bug 842007

2005-03-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcflow.c (dfNumCompare): committed the wrong version of this
	last time.

2005-03-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/port.h (struct PORT),
	* src/avr/ralloc.c (avr_assignRegisters),
	* src/avr/main.c,
	* src/ds390/ralloc.c (ds390_assignRegisters),
	* src/ds390/main.c,
	* src/hc08/ralloc.c (hc08_assignRegisters),
	* src/hc08/main.c,
	* src/mcs51/ralloc.c (mcs51_assignRegisters),
	* src/mcs51/main.c,
	* src/pic/ralloc.c (pic14_assignRegisters),
	* src/pic/main.c,
	* src/pic16/ralloc.c (pic16_assignRegisters),
	* src/pic16/main.c,
	* src/xa51/ralloc.c (xa51_assignRegisters),
	* src/xa51/main.c,
	* src/z80/ralloc.c (z80_assignRegisters),
	* src/z80/ralloc.h,